--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,9 +9,15 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">A venir</ion-title>
     </ion-toolbar>
   </ion-header>
+  <main>
+    <div class="stitch">
+      <img src="assets/stitch.jpg">
+    </div>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+    <h1>Alexandrya est en cours de développement</h1>
+    <ion-spinner name="crescent"></ion-spinner>
+  </main>
 </ion-content>
