--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,7 +14,7 @@
   </ion-header>
   <main>
     <div class="stitch">
-      <img src="assets/stitch.jpg">
+      <img src="assets/stitch.webp">
     </div>
 
     <h1>Alexandrya est en cours de développement</h1>
